--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>登录</title>
     <!-- 注意：项目正式环境请勿引用该地址 -->
-    <link href="//unpkg.com/layui@2.7.6/dist/css/layui.css" rel="stylesheet">
+    <link href="https://lf3-cdn-tos.bytecdntp.com/cdn/expire-1-M/layui/2.6.8/css/layui.css" type="text/css" rel="stylesheet" />
     <style>
       html {
         height: 100%;
@@ -113,7 +113,7 @@
       </div>
     </div>
 
-    <script src="//unpkg.com/layui@2.7.6/dist/layui.js"></script>
+    <script src="https://lf6-cdn-tos.bytecdntp.com/cdn/expire-1-M/layui/2.6.8/layui.js" type="application/javascript"></script>
     <script>
       layui.use(['layer', 'form'], function() {
         var layer = layui.layer;
